[gd_scene load_steps=4 format=2]

[ext_resource path="res://options.gd" type="Script" id=1]
[ext_resource path="res://fonts/heller_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/heller_20.tres" type="DynamicFont" id=3]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.329412, 0.329412, 0.329412, 0.870588 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 19.0
margin_right = -23.0
margin_bottom = -24.0

[node name="HboxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1238.0
margin_bottom = 64.0
alignment = 1

[node name="Options" type="Label" parent="VBoxContainer/HboxContainer"]
margin_left = 518.0
margin_right = 720.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.807843, 0.262745, 0.262745, 1 )
custom_colors/font_color_shadow = Color( 0.541176, 0.0470588, 0.0470588, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 2
text = "OPTIONS"
align = 1
valign = 1

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1238.0
margin_bottom = 677.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer1"]
editor/display_folded = true
margin_right = 617.0
margin_bottom = 609.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Display" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_right = 617.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "DISPLAY"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_top = 24.0
margin_right = 617.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resolution" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer/HBoxContainer"]
margin_top = 86.0
margin_right = 91.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer1/VBoxContainer/HBoxContainer"]
margin_left = 95.0
margin_top = 86.0
margin_right = 617.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "1920x1080"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_top = 220.0
margin_right = 617.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_top = 416.0
margin_right = 617.0
margin_bottom = 609.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer1"]
margin_left = 621.0
margin_right = 1238.0
margin_bottom = 609.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sound" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_right = 617.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "SOUND"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 24.0
margin_right = 617.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Music" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer"]
margin_top = 86.0
margin_right = 62.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "MUSIC   "

[node name="HSlider_music" type="HSlider" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer"]
margin_left = 66.0
margin_right = 508.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
tick_count = 5
ticks_on_borders = true

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer"]
margin_left = 512.0
margin_top = 86.0
margin_right = 537.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="CheckButton_music" type="CheckButton" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer"]
margin_left = 541.0
margin_right = 617.0
margin_bottom = 192.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 220.0
margin_right = 617.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Effects" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer2"]
margin_top = 86.0
margin_right = 65.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "EFFECTS"

[node name="HSlider_effects" type="HSlider" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer2"]
margin_left = 69.0
margin_right = 508.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
tick_count = 5
ticks_on_borders = true

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer2"]
margin_left = 512.0
margin_top = 86.0
margin_right = 537.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="CheckButton_effects" type="CheckButton" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer2"]
margin_left = 541.0
margin_right = 617.0
margin_bottom = 192.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 416.0
margin_right = 617.0
margin_bottom = 609.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="value_changed" from="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer/HSlider_music" to="." method="_on_HSlider_music_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer/CheckButton_music" to="." method="_on_CheckButton_music_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer2/HSlider_effects" to="." method="_on_HSlider_effects_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer1/VBoxContainer2/HBoxContainer2/CheckButton_effects" to="." method="_on_CheckButton_effects_toggled"]
